--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,11 +22,11 @@ body {
   font-family: Helvetica, sans-serif !important;
   background: linear-gradient(
     130deg,
-    #04268c,
-    #07338c,
-    #0a5da6,
-    #0f7cbf,
-    #05f2f2
+    #eef0f5,
+    #ffffff,
+    #e8eaec,
+    #eaecee,
+    #cad1d1
   );
   background-size: 1000% 1000%;
 
